# bi-nitrogen-fertilization-ml-pipeline

./: LICENSE  README.md  pyproject.toml  scratch_350.py  scratch_352.py  scratch_359.py
bi_nitrogen_fertilization_ml_pipeline/artifacts/: baseline_model.py
bi_nitrogen_fertilization_ml_pipeline/assets/: __init__.py  baseline_model.py
bi_nitrogen_fertilization_ml_pipeline/core/: consts.py  defaults.py  plot_settings.py
bi_nitrogen_fertilization_ml_pipeline/core/data_classes/: base_model.py  evaluation_functions.py  features_config.py  field_utils.py  k_fold_cross_validation.py  pipeline_report.py  preprocessed_datasets.py  train_artifacts.py  train_params.py  train_pipeline_logical_steps.py  train_pipeline_report.py  train_session_context.py  training_artifacts.py  validations.py
bi_nitrogen_fertilization_ml_pipeline/core/dataset_preprocessing/: dataset_preprocessing.py  feature_extraction.py  feature_extraction_transformer.py  imputation_manager.py
bi_nitrogen_fertilization_ml_pipeline/core/display_utils/: train_pipeline_progress_display.py
bi_nitrogen_fertilization_ml_pipeline/core/model_storage/: __init__.py  api.py  keras_model_storage.py  train_artifcats_storage.py
bi_nitrogen_fertilization_ml_pipeline/main_api/: __init__.py
bi_nitrogen_fertilization_ml_pipeline/model_inference/: __init__.py  api.py
bi_nitrogen_fertilization_ml_pipeline/model_training/: __init__.py  model_evaluation.py  train_and_evaluate_model.py  user_input.py
docs/api_reference/: features_config.py  train_params.py
docs/examples/: inference_example.ipynb  inference_example.py  training_example.ipynb  training_example.py
experiment_notebooks/: test_notebook.ipynb
tests/: test_dataset_preprocessing_e2e.py  test_feature_extraction_e2e.py  test_fit_keras_model_e2e.py  test_full_e2e.py  test_train_and_evaluate_model_e2e.py  test_train_keras_model_e2e.py  test_train_model_e2e.py
tests/utils/: test_datasets.py
(+32 files in other folders)
