[tool.poetry]
name = "bi-nitrogen-fertilization-ml-pipeline"
version = "1.0.0"
description = ""
authors = ["Itay Lotan <itay235711@gmail.com >"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = ">1.4.0,<1.6"
scikit-learn = "^1.4.1.post1"
# install tensorflow-macos is running from mac OS, and tensorflow in any other case
tensorflow-macos = { version = "^2.15.0", markers = "sys_platform == 'darwin'" }
tensorflow = { version = "^2.15.0", markers = "sys_platform != 'darwin'" }
tensorboard = "^2.15.1"
tqdm = "4.48.2"
dask = "^2024.2.0"
ydata-profiling = "4.1.2"
pydantic = ">=1.8.1,<1.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
