[tool.poetry]
name = "bi-nitrogen-fertilization-ml-pipeline"
version = "1.0.0"
description = ""
authors = ["Itay Lotan <itay235711@gmail.com >"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = ">1.4.0,<1.6"
scikit-learn = "^1.4.1.post1"
# install tensorflow-macos is running from mac OS with an M1 processor (arm64),
# and tensorflow in any other case
tensorflow-macos = { version = "2.15.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
tensorflow = { version = "2.15.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }
pydantic = ">=1.8.1,<1.11"
shap = "^0.45.0"
matplotlib = ">=3.2,<3.7"
rich = "^13.7.1"
datapane = "^0.17.0"
ydata-profiling = "4.0.0"
numba = "0.56.2"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
faker = "^23.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s"
